# pelican_youtube

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  __init__.py  pyproject.toml  setup.cfg  setup.py  youtube.css  youtube.py
pelican/plugins/youtube/: __init__.py  youtube.py
pelican_youtube/: __init__.py  youtube.py
